...
                android:src="@drawable/ic_profile_avatar"
                android:contentDescription="@string/profile_picture"
                android:background="@drawable/circle_bg"
                android:padding="4dp" />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"/>
...
