...
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/eventRefresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/topBarLayout"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/eventRecycler"
            android:layout_width="match_parent"
...
